--- a/index.html
+++ b/index.html
@@ -21,5 +21,8 @@
             <button>Заказать звонок</button>
         </div>
     </header>
+    <h2>
+        Выберите пункт доставки:
+    </h2>
 </body>
 </html>
