--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <a href="#services">Услуги</a>
             <a href="#contacts">Контакты</a>
             <a href="#about-us">О нас</a>
+            <a href="#blog">Блог</a>
         </nav>
         <div>
             <a href="tel:+79039059588">+7 903 905-95-88</a>
